# marathon

./: CMakeLists.txt  LICENSE  Makefile  README.md  readme.txt
applications/ListStates/: CMakeLists.txt  ListStates.cpp
applications/MixingBounds/: CMakeLists.txt  MixingBounds.cpp
applications/RandomSamples/: CMakeLists.txt  RandomSamples.cpp
applications/TransitionMatrix/: CMakeLists.txt  TransitionMatrix.cpp
applications/bounds/: .cproject  .project  makefile  run.sh
applications/bounds/data/: n4.txt  n5_all.txt  n5_reduced.txt  n6_all.txt  n6_reduced.txt  n7.txt
applications/bounds/scripts/: half_regular_sequences1.py  half_regular_sequences2.py  half_regular_sequences3.py  half_regular_sequences4.py  near_threshold1.py
applications/bounds/src/: bounds.cpp  bounds.cpp~
cmake/Modules/: FindARPACK.cmake  FindSuperLU.cmake
example/: totalMixingTime.cpp
examples/: Makefile  Makefile~  example.cpp~  totalMixingTime.cpp
examples/MixingBounds/: Makefile  MixingBounds.cpp  mixing_bounds.cpp
examples/RandomSamples/: Makefile  RandomSamples  RandomSamples.cpp
examples/States/: Makefile  States.cpp  states.cpp
examples/TotalMixingTime/: Makefile  totalMixingTime.cpp
examples/TransitionMatrix/: Makefile  TransitionMatrix.cpp  transition_matrix.cpp
examples/count/: CMakeLists.txt  README.md  helper.h  main.cpp
examples/enumerate/: CMakeLists.txt  README.md  helper.h  main.cpp
examples/sample/: CMakeLists.txt  README.md  helper.h  main.cpp
examples/spectralBound/: CMakeLists.txt  README.md  helper.h  main.cpp
examples/totalMixingTime/: CMakeLists.txt  README.md  helper.h  main.cpp
examples/transitionMatrix/: CMakeLists.txt  README.md  helper.h  main.cpp
include/: marathon.h
include/arpack++/: arbnsmat.h  arbsmat.h  arbsnsym.h  arbssym.h  ardgcomp.h  ardgnsym.h  ardgsym.h  ardnsmat.h  ardscomp.h  ardsmat.h  ardsnsym.h  ardssym.h  argcomp.h  argeig.h  argnsym.h  argsym.h  arlgcomp.h  arlgnsym.h  arlgsym.h  arlnsmat.h  arlnspen.h  arlscomp.h  arlsmat.h  arlsnsym.h  arlspdef.h  arlspen.h  arlssym.h  arrgcomp.h  arrgnsym.h  arrgsym.h  arrscomp.h  arrsnsym.h  arrssym.h  arscomp.h  arseig.h  arsnsym.h  arssym.h  arugcomp.h  arugnsym.h  arugsym.h  (+10 more)
include/marathon/: Combinatorics.h  Cuda.h  CudaWrapper.h  Decimal.h  Diameter.h  Eigenvalue.h  Eigenvalues.h  MarkovChain.h  MarkovChainDense.h  Memory.h  MixingTime.h  PathCongestion.h  PathConstructionScheme.h  Random.h  Rational.h  State.h  StateGraph.h  Transition.h  TransitionMatrix.h  TransitionMatrixCBLAS.h  TransitionMatrixCuBLAS.h  TransitionMatrixCuBLASXt.h  Types.h  basic_random.h  combination_generator.h  config.h.in  count.h  empirical_mixing_time.h  enumerate.h  integer.h  marathon.h  markov_chain.h  markov_chain.hpp  mixing_time.h  path_congestion.h  path_construction_scheme.h  permutation_generator.h  random_device.h  random_generator.h  rational.h  (+8 more)
include/marathon/binary_matrix/: binary_matrix.h  common.h  markov_chain.h  metrics.h  random_generator.h  sampling_engine.h
include/marathon/bipgraph/: BinaryMatrix.h  HavelHakimi.h  KannanCanPath.h  SwitchChain.h  SwitchChainBerger.h
include/marathon/chain/: Chains.h
include/marathon/common/: exceptions.h  markov_chain.hpp  rational.h  state_graph.h  transition.h
include/marathon/cpu/: analyzer.h  transition_matrix.h
include/marathon/gpu/: analyzer.h  transition_matrix.h
include/marathon/hybrid/: analyzer.h  transition_matrix.h
include/marathon/matching/: BipartiteMatching.h  Broder86.h  JS89CanPath.h  JSV04.h  SparseBipartiteGraph.h  bipartite_matching.h  canonical_path_js89.h  count.h  enumerate.h  markov_chain.h  metrics.h  perfect_matching_broder86.h  perfect_matching_jsv04.h  random_generator_exact.h  random_generator_mcmc.h  realize.h  (+1 more)
src/: CMakeLists.txt
src/apps/ListStates/: CMakeLists.txt  ListStates.cpp
src/apps/MixingBounds/: CMakeLists.txt  MixingBounds.cpp
src/apps/RandomSamples/: CMakeLists.txt  RandomSamples.cpp
src/apps/TransitionMatrix/: CMakeLists.txt  TransitionMatrix.cpp
src/chains/matching/: bipartite_matching.cpp  broder86.cpp  chain_JS89.cpp  matching_chain_JSV04.cpp  sparse_bipartite_graph.cpp
src/chains/sequences/: chain_swap_bipartite.cpp  chain_swap_bipartite_fast.cpp  dense_bipartite_graph.cpp  havel_hakimi.cpp  switch_bipartite.cpp  switch_bipartite_fast.cpp  switch_chain_bipartite.cpp
src/marathon/: CanonicalPath.cpp  Combinatorics.cpp  Cuda.cpp  CudaInitFinalize.cu  CudaVariationDistance.cu  CudaWrapper.cu  Eigenvalue.cpp  Eigenvalues.cpp  InitFinalize.cpp  MarkovChain.cpp  MarkovChainDense.cpp  PathCongestion.cpp  Random.cpp  Rational.cpp  ShortestPaths.cpp  StateGraph.cpp  TotalMixingTime.cpp  Transition.cpp  TransitionMatrixCBLAS.cpp  TransitionMatrixCuBLAS.cpp  TransitionMatrixCuBLASXt.cpp  marathon.cpp  marathon_cuda.cpp  marathon_cuda_avail.cpp  marathon_cuda_nonavail.cpp  marathon_nocuda.cpp  rational.cpp  state_graph.cpp  transition.cpp
src/marathon/chain/bipgraph/: BinaryMatrix.cpp  Curveball.cpp  CurveballForbiddenEntries.cpp  DenseBipartiteGraph.cpp  ExtendedCurveball.cpp  HavelHakimi.cpp  KannanCanPath.cpp  LindaChain.cpp  SwitchChain.cpp  SwitchChainBerger.cpp
src/marathon/chain/matching/: BipartiteMatching.cpp  Broder86.cpp  JS89CanPath.cpp  JSV04.cpp  SparseBipartiteGraph.cpp
src/marathon/chains/matching/: bipartite_matching.cpp  matching_chain_JS89.cpp  matching_chain_JSV04.cpp  sparse_bipartite_graph.cpp
src/marathon/chains/sequences/: dense_bipartite_graph.cpp  havel_hakimi.cpp  switch_chain_bipartite.cpp  switch_chain_bipartite_berger.cpp
src/marathon/common/: rational.cpp  state_graph.cpp  transition.cpp
src/marathon/cpu/: canonical_path.cpp  eigenvalues.cpp  mixing_time.cpp  shortest_paths.cpp  transition_matrix.cpp  transition_matrix.cpp~  variation_distance.cpp
src/marathon/cuda/: CudaVariationDistance.cu
src/marathon/gpu/: cuda_functions.cu  cuda_functions.d  init_finalize.cpp  mixing_time.cpp  transition_matrix.cpp  variation_distance.cpp
src/marathon/hybrid/: cuda_functions.cu  init_finalize.cpp  mixing_time.cpp  transition_matrix.cpp
(+70 files in other folders)
